--- a/Client-UI/orders-ui/package.json
+++ b/Client-UI/orders-ui/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-axios": "^2.1.5"
+    "vue-axios": "^2.1.5",
+    "element-ui": "^2.13.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
